Replace ENTRYPOINT with CMD
The CMD line is the command line we would want to use to launch the
Docker container.